Fixed: Reimport UserInterface

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /Undead Unalive/[Bb]uilds/
 /Undead Unalive/[Ll]ogs/
 /Undead Unalive/[Uu]ser[Ss]ettings/
+/Undead Unalive/Assets/TextMesh Pro/Examples & Extras/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
